fixes #2901, added common position relative hack for IE
svn changeset:7804 branch:6.0

--- a/WebContent/VAADIN/themes/base/splitpanel/splitpanel.css
+++ b/WebContent/VAADIN/themes/base/splitpanel/splitpanel.css
@@ -29,3 +29,10 @@
 .v-ie6 .v-splitpanel-horizontal .v-splitpanel-hsplitter div {
 	height: 99%;
 }
+
+.v-ie6 .v-splitpanel-first-container,
+.v-ie6 .v-splitpanel-second-container,
+.v-ie7 .v-splitpanel-first-container,
+.v-ie7 .v-splitpanel-second-container {
+	position:relative;
+}
