--- a/WebContent/VAADIN/themes/reindeer/common/common.css
+++ b/WebContent/VAADIN/themes/reindeer/common/common.css
@@ -21,7 +21,8 @@
 .v-popupview-popup textarea,
 .v-filterselect-suggestpopup,
 .v-datefield-popup,
-.v-contextmenu {
+.v-contextmenu,
+.v-Notification {
 	font-family: Arial, Helvetica, Tahoma, Verdana, sans-serif;
 	font-size: 12px;
 	line-height: normal;
@@ -46,7 +47,8 @@
 .v-sa .v-popupview-popup textarea,
 .v-sa .v-filterselect-suggestpopup,
 .v-sa .v-datefield-popup,
-.v-sa .v-contextmenu {
+.v-sa .v-contextmenu,
+.v-Notification {
 	font-family: Helvetica, Arial, "Lucida Grande", Geneva, Tahoma, Verdana, sans-serif;
 }
 .v-errorindicator {
