--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1884,7 +1884,8 @@ div > .v-button-small span,
 .v-popupview-popup textarea,
 .v-filterselect-suggestpopup,
 .v-datefield-popup,
-.v-contextmenu {
+.v-contextmenu,
+.v-Notification {
 	font-family: Arial, Helvetica, Tahoma, Verdana, sans-serif;
 	font-size: 12px;
 	line-height: normal;
@@ -1909,7 +1910,8 @@ div > .v-button-small span,
 .v-sa .v-popupview-popup textarea,
 .v-sa .v-filterselect-suggestpopup,
 .v-sa .v-datefield-popup,
-.v-sa .v-contextmenu {
+.v-sa .v-contextmenu,
+.v-Notification {
 	font-family: Helvetica, Arial, "Lucida Grande", Geneva, Tahoma, Verdana, sans-serif;
 }
 .v-errorindicator {
@@ -2324,6 +2326,14 @@ td.v-datefield-calendarpanel-nextyear {
 .v-horizontallayout-blue,
 .v-orderedlayout-blue {
 	background-color: #bcd3de;
+}
+
+/* ./WebContent/VAADIN/themes/reindeer/notification/notification.css */
+.v-Notification {
+	color: #fff;
+	border-radius: 4px
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/panel/panel.css */
@@ -3042,14 +3052,16 @@ input.v-textfield-prompt {
 /* ./WebContent/VAADIN/themes/reindeer/window/window.css */
 .v-window {
 	background: transparent;
+}
+.v-window-wrap {
 	border: 1px solid #808386;
 }
-.v-sa .v-window,
-.v-ff35 .v-window,
-.v-op .v-window {
+.v-sa .v-window-wrap,
+.v-ff3 .v-window-wrap,
+.v-op .v-window-wrap {
 	border-color: rgba(0,0,0,.2);
 }
-.v-ff2 .v-window {
+.v-ff2 .v-window-wrap {
 	border: none;
 }
 .v-window-outerheader {
