--- a/WebContent/demo/css/styles.css
+++ b/WebContent/demo/css/styles.css
@@ -1,13 +1,23 @@
 html {
 	font-size: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-	font-family: "Trebuchet MS", Tahoma, Geneva, Helvetica, Arial, sans-serif;
-	font-size: 62.5%; /* Scale down to 10px */
-	line-height: 1.8em;
-	color: #5c666a;
-	background: #e9eced url(../img/body-bg.gif) repeat-x;
+	-x-system-font: none;
+	background-color: #FFFFFF;
+	font-family: Arial, Helvetica, Verdana, sans-serif;
+	font-size: 62.5%;
+	font-size-adjust: none;
+	font-stretch: normal;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	line-height: 1.6em;
+	background: transparent url(../img/body-bg.gif) repeat-x 0 40px;
+	margin: 0;
+	parring: 0;
 }
 
 .clearer {
@@ -16,36 +26,38 @@ body {
 	clear: both;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,h2,h3,h4,h5,h6 {
+	color: #464440;
 	margin: 0;
 	padding: 0;
-	font-weight: normal;
-	font-size: 1em;
+	font-weight: bold;
+	font-size: 1.4em;
 }
 
 a {
 	text-decoration: none;
 }
-
 a:link {
-	color: #4696d0;
+	color: #0066CC;
 }
 
 a:visited {
-	color: #7d9bb2;
+	color: #666;
 }
 
 a:hover {
-	color: #59b6fa;
+	color: #ee7c08;
+	text-decoration: underline;
 }
 
 a:active {
-	color: #ff581e;
+	color: #ee7c08;
 }
 
 a.more {
 	padding-right: 10px;
-	background: transparent url(../img/link-arrow.png) no-repeat center right;
+	background: transparent url(../img/link-arrow.png) no-repeat center
+		right;
 }
 
 a.more span {
@@ -56,70 +68,60 @@ a[name]:hover {
 	color: #5c666a;
 }
 
-
 /* page furniture */
-
 #container {
 	width: 759px;
-	margin: 60px auto;
+	margin: 0 auto;
 }
 
 #container .header {
-	height: 81px;
-	background: transparent url(../img/header.png);
+	background: transparent url(../img/header.png) no-repeat 0 7px;
+	height: 50px;
 }
 
 #container .content {
-	background: #fff url(../img/content-bg.png);
 	padding: 10px 27px 20px 27px;
 	width: 705px; /* for IE hasLayout, fixes beekaboo-bug */
 }
 
-#container .footer {
-	height: 72px;
-	background: transparent url(../img/footer.png) no-repeat;
-	position: relative;
+.footer {
+	margin-top: 30px;
+	background: #D3D2C4;
+	padding: 40px 20px 10px 10px;;
 }
 
-#container .footer a {
+.footer a {
+	font-size: 12px;
+	font-weight: bold;
+	color: #999;
 	display: block;
-	width: 95px;
-	height: 15px;
-	text-indent: -90000px;
-	position: absolute;
-	left: 27px;
-	bottom: 3px;
-	background: transparent url(../img/itmill-logo.png);
+	text-align: right;
 	border: none;
 	overflow: hidden; /* IE6 fix */
 }
 
-#container .footer em {
-	display: block;
-	width: 111px;
-	height: 18px;
-	text-indent: -90000px;
-	position: absolute;
-	right: 27px;
-	bottom: 0;
-	background: transparent url(../img/itmill-slogan.png);
+
+#container .header h1 {
+	color: #fff;
+	float: left;
+	margin: 0 0 0 150px;
+	font-size: 30px;
+	background-color: #ee7c08;
+	height: 45px;
+	line-height: 35px;
+	padding: 5px 10px 0 10px;
 }
 
-#container .header h1,
-#container .header em {
-	display: none;
+#header-links {
+	text-align: right;
+	padding: 13px 0 0px 0;
+	height: 27px;
+	/*background-color: #ee7c08;*/
 }
 
-#container .header div#header-links {
-    float: right;
-    text-align: right;
-    margin: 20px 27px 0 0;
-}
-
-#container .header a {
-	color: #5c666a;
+#header-links a {
+	color: #00B4F0;
 	padding-right: 10px;
-	background: transparent url(../img/link-arrow2.png) no-repeat center right;
 	border: none;
 	font-size: 1.2em;
 }
@@ -132,10 +134,7 @@ a[name]:hover {
 	font-weight: normal;
 }
 
-
-
 /* content area */
-
 .content h3 {
 	font-size: 14px;
 	color: #39529b;
@@ -144,93 +143,65 @@ a[name]:hover {
 	letter-spacing: -0.02em;
 }
 
-.content h2 {
-	font-size: 18px;
-	color: #39529b;
-	height: 18px;
-	padding: 4px 0 6px 0;
-	letter-spacing: -0.02em;
-}
-
-.content h1 {
-	font-size: 22px;
-	color: #39529b;
-	height: 22px;
-	padding: 15px 0 10px 0;
-	letter-spacing: -0.02em;
-}
 
 #index .content h2 {
 	padding-left: 34px;
 }
 
-.content p,
-.content li,
-.content pre {
+.content p,.content li,.content pre {
 	font-size: 12px;
 }
 
-#index .panel p,
-#index .panel li {
+#index .panel p,#index .panel li {
 	font-size: 11px;
 }
-
-
-
-#getting-started h2 {
-	background: transparent url(../img/icon-home.png) no-repeat;
-	margin-bottom: 78px;
+#getting-started {
+	margin-top: 27px;
 }
-#demos h2 {
-	background: transparent url(../img/icon-eye.png) no-repeat;
+div#getting-started h4 {
+	margin-top: 0px;
 }
+
 #demos h2.tutorial {
 	margin-top: 1.4em;
 }
-#support-licensing h2 {
-	background: transparent url(../img/icon-doc.png) no-repeat;
-	margin-top: 1em;
-}
 
-#getting-started,
-#demos,
-#support-licensing {
+#getting-started,#demos,#support-licensing {
 	font-size: 1.3em;
 }
 
-#getting-started,
-#support-licensing,
-#package-contents,
-#feedback {
+#getting-started,#support-licensing,#package-contents,#feedback {
 	width: 340px;
 	float: right;
 	clear: right;
 }
-#package-contents,
-#feedback {
+
+#package-contents,#feedback {
 	width: 300px;
 }
 
 #demos {
-	width: 335px;
+	width: 335px;	
 	float: left;
+	/*
+	padding: 20px;
+	background: #000;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	*/
 }
 
-#getting-started h4,
-#demos h4,
-#support-licensing h4 {
+#getting-started h4,#demos h4,#support-licensing h4 {
 	font-weight: bold;
 	margin: 1em 0 0.2em 0;
 }
 
-#getting-started p,
-#demos p,
-#support-licensing p {
+#getting-started p,#demos p,#support-licensing p {
 	margin: 0 0 1em 0;
 }
 
-.links,
-#demos ul.links {
+.links,#demos ul.links {
 	list-style: none;
 	padding: 0;
 	margin: -1em 0 1em 0;
@@ -243,29 +214,20 @@ a[name]:hover {
 }
 
 
-/* eclipse image */
-
-#getting-started {
-	background: transparent url(../img/eclipse-quickstart.png) no-repeat 0 40px;
-}
-
-
-
 /* demo icons */
-
 #demos #sampler {
-	width: 345px;
-	height: 138px;
-	background: transparent url(../img/sampler-btn.png) no-repeat;
-	margin-top: -14px;
+	xwidth: 345px;
+	xheight: 138px;
+	xbackground: transparent url(../img/sampler-btn.png) no-repeat;
+	xmargin-top: -14px;
 }
 
 #sampler a {
-	display: block;
-	width: 345px;
-	height: 138px;
-	text-indent: -90000px;
-	outline: none;
+	xdisplay: block;
+	xwidth: 345px;
+	xheight: 138px;
+	xtext-indent: -90000px;
+	xoutline: none;
 }
 
 #sampler span {
@@ -295,10 +257,7 @@ a[name]:hover {
 	padding-left: 1.5em;
 }
 
-
-
 /* package contents */
-
 .panel {
 	width: 300px;
 	padding: 0 17px 0 17px;
@@ -377,14 +336,12 @@ a[name]:hover {
 	padding-top: 1.5em;
 }
 
-
 /* feedback box */
-
 #feedback {
 	margin-top: 8px;
 }
 
-#feedback h4{
+#feedback h4 {
 	font-size: 1.1em;
 	margin: 4px 0 5px 0;
 	color: #5b7b93;
@@ -396,7 +353,8 @@ a[name]:hover {
 }
 
 #feedback textarea {
-	font-family: "Trebuchet MS", Tahoma, Geneva, Helvetica, Arial, sans-serif;
+	font-family: "Trebuchet MS", Tahoma, Geneva, Helvetica, Arial,
+		sans-serif;
 	border: solid 1px #c8cdd0;
 	background: #fff;
 	font-size: 1.1em;
