#2904 Toolkit -> Vaadin renames: search for "IT Mill" and "itmill", partial changes including many URLs
svn changeset:7842 branch:6.0

--- a/WebContent/VAADIN/themes/example/layouts/Contact.html
+++ b/WebContent/VAADIN/themes/example/layouts/Contact.html
@@ -9,7 +9,7 @@ e-mail.
 
 <h3>Report a Bug</h3>
 <p>
-If you have found an issue with IT Mill Toolkit, demo applications or
+If you have found an issue with Vaadin, demo applications or
 documentation, please report it to us. Fill out the following form to
 send us any relevant information about the issue.
 Click here
