--- a/WebContent/VAADIN/themes/example/layouts/Developers.html
+++ b/WebContent/VAADIN/themes/example/layouts/Developers.html
@@ -2,7 +2,7 @@
 <h3>Developers</h3>
 
 <p>
-This section contains information for developers using IT Mill Toolkit
+This section contains information for developers using Vaadin
 to create Java web applications.
 </p>
 
