--- a/WebContent/VAADIN/themes/example/layouts/News.html
+++ b/WebContent/VAADIN/themes/example/layouts/News.html
@@ -35,6 +35,7 @@ other software development services and outsourcing services.
 
 <p>
 In late 2006 IT Mill ensured funding of the new generation of
-Millstone. IT Mill Toolkit was released in early 2007. 
+Millstone. IT Mill Toolkit was released in early 2007 and renamed
+Vaadin in 2009.
 </p>
 
