--- a/WebContent/VAADIN/themes/example/layouts/Products.html
+++ b/WebContent/VAADIN/themes/example/layouts/Products.html
@@ -1,5 +1,5 @@
 
-<h3>Top 5 reasons to choose IT Mill Toolkit</h3>
+<h3>Top 5 reasons to choose Vaadin</h3>
 
 <p>
 1. High compatibility with web browsers and application servers
