--- a/WebContent/VAADIN/themes/reindeer/button/button.css
+++ b/WebContent/VAADIN/themes/reindeer/button/button.css
@@ -11,8 +11,13 @@ div > .v-button,
 	border: none;
 	cursor: default;
 }
-div > .v-button span,
-.v-ie7 .v-button span {
+/* Error indicator need this */
+.v-ff .v-button,
+.v-sa .v-button {
+	position: relative;
+}
+div > .v-button .v-button-caption,
+.v-ie7 .v-button .v-button-caption {
 	display: inline-block;
 	height: 22px;
 	padding: 4px 15px 0 9px;
@@ -26,7 +31,7 @@ div > .v-button span,
 	line-height: 16px;
 	float: none;
 }
-.v-sa .v-button span {
+.v-sa .v-button .v-button-caption {
 	height: 21px;
 	padding-top: 5px;
 }
@@ -34,7 +39,7 @@ div > .v-button span,
 	background-image: url(img/left-focus.png); /** sprite-ref: buttons */
 	outline: none;
 }
-.v-button:focus span {
+.v-button:focus .v-button-caption {
 	background-image: url(img/right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 	outline: none;
 }
@@ -43,31 +48,30 @@ div > .v-button span,
 	background-image: url(img/left-pressed.png); /** sprite-ref: buttons */
 	outline: none;
 }
-.v-button:active span,
-.v-ie7 .v-button.v-pressed span {
+.v-button:active .v-button-caption,
+.v-ie7 .v-button.v-pressed .v-button-caption {
 	background-image: url(img/right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 	outline: none;
-}
-.v-ie7 .v-button.v-pressed span {
-	position: relative;
 }
 /* FF3 & FF2 */
 .v-button::-moz-focus-inner {
 	border: none;
 	padding: 0;
 }
-.v-ff2 .v-button span {
+.v-ff2 .v-button .v-button-caption {
 	display: -moz-inline-box;
 	padding-top: 6px;
 	height: 20px;
 }
 /* IE7 */
-.v-ie7 .v-button.v-pressed .v-icon {
+.v-ie7 .v-button.v-pressed .v-button-caption {
 	position: relative;
+}
+.v-ie7 .v-button.v-pressed .v-icon {
 	z-index: 2;
 }
 /* Opera */
-.v-op .v-button:active span {
+.v-op .v-button:active .v-button-caption {
 	margin-top: -1px;
 	margin-left: -1px;
 }
@@ -89,26 +93,28 @@ div > .v-button .v-icon,
 .v-ff2 .v-button-link .v-icon {
 	margin: 0;
 }
-.v-button .v-icon + span,
-.v-button .v-icon + .v-errorindicator + span {
+.v-button .v-icon + .v-button-caption,
+.v-button .v-icon + .v-errorindicator + .v-button-caption {
 	margin-left: -19px;
 	padding-left: 19px;
-}
-.v-ie7 .v-button .v-icon + span,
-.v-ie7 .v-button .v-icon + .v-errorindicator + span {
-	margin-left: -23px;
-	padding-left: 23px;
 }
 /* Buttons with error indicator */
 div > .v-button .v-errorindicator,
 .v-ie7 .v-button .v-errorindicator {
 	position: absolute;
-	display: inline-block;
+	display: block;
 	width: 9px;
 	height: 16px;
 	background: transparent url(../common/icons/error.png) no-repeat 50%;
 	padding: 0;
 	margin: 0;
+	z-index: 3;
+}
+.v-ie7 .v-button.v-pressed .v-errorindicator {
+	display: none;
+}
+.v-ie7 .v-button .v-icon + .v-errorindicator + .v-button-caption {
+	margin-left: 0;
 }
 .v-ie6 .v-button .v-errorindicator {
 	position: absolute;
@@ -117,14 +123,27 @@ div > .v-button .v-errorindicator,
 	height: 16px;
 	background: transparent url(../common/icons/error-ie6.png) no-repeat 50%;
 }
-.v-ff .v-button,
-.v-sa .v-button {
-	position: relative;
-}
 .v-ff .v-button .v-errorindicator,
 .v-sa .v-button .v-errorindicator {
 	top: 2px;
 	left: 10px;
+}
+/* Buttons with explicit size */
+.v-button[style*="width"] .v-button-caption {
+	display: block;
+}
+.v-button[style*="width"] .v-icon + .v-button-caption,
+.v-button[style*="width"] .v-icon + .v-errorindicator + .v-button-caption {
+	margin-left: 0;
+}
+.v-button[style*="width"] .v-icon,
+.v-ie7 .v-button .v-icon {
+	position: absolute;
+	top: 4px;
+}
+.v-ie7 .v-button > .v-button-caption {
+	display: block;
+	margin-left: 0;
 }
 /* Link style buttons */
 .v-button.v-button-link,
@@ -134,8 +153,8 @@ div > .v-button .v-errorindicator,
 	padding: 0;
 	cursor: pointer;
 }
-.v-button.v-button-link span,
-.v-ie7 .v-button-link.v-pressed span {
+.v-button.v-button-link .v-button-caption,
+.v-ie7 .v-button-link.v-pressed .v-button-caption {
 	background: transparent;
 	height: auto;
 	padding: 0;
@@ -145,7 +164,7 @@ div > .v-button .v-errorindicator,
 	font-size: 12px;
 	text-shadow: none;
 }
-.v-button.v-button-link .v-icon + span {
+.v-button.v-button-link .v-icon + .v-button-caption {
 	margin: 0;
 	padding: 0;
 }
@@ -159,22 +178,22 @@ div > .v-button-primary,
 .v-ie7 .v-button-primary {
 	background-image: url(img/primary-left.png); /** sprite-ref: buttons */
 }
-div > .v-button-primary span,
-.v-ie7 .v-button-primary span {
+div > .v-button-primary .v-button-caption,
+.v-ie7 .v-button-primary .v-button-caption {
 	background-image: url(img/primary-right.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 .v-button-primary:focus {
 	background-image: url(img/primary-left-focus.png); /** sprite-ref: buttons */
 }
-.v-button-primary:focus span {
+.v-button-primary:focus .v-button-caption {
 	background-image: url(img/primary-right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 .v-button-primary:active,
 .v-ie7 .v-button-primary.v-pressed {
 	background-image: url(img/primary-left-pressed.png); /** sprite-ref: buttons */
 }
-.v-button-primary:active span,
-.v-ie7 .v-button-primary.v-pressed span {
+.v-button-primary:active .v-button-caption,
+.v-ie7 .v-button-primary.v-pressed .v-button-caption {
 	background-image: url(img/primary-right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 /* 
@@ -185,33 +204,33 @@ div > .v-button-small,
 	background-image: url(img/small-left.png); /** sprite-ref: buttons */
 	height: 20px;
 }
-div > .v-button-small span,
-.v-ie7 .v-button-small span {
+div > .v-button-small .v-button-caption,
+.v-ie7 .v-button-small .v-button-caption {
 	background-image: url(img/small-right.png); /** sprite-ref: buttons; sprite-alignment: right */
 	height: 19px;
 	padding: 1px 11px 0 5px;
 	font-weight: normal;
 }
-.v-ff2 .v-button-small span {
+.v-ff2 .v-button-small .v-button-caption {
 	height: 17px;
 	padding-top: 3px;
 }
-.v-sa .v-button-small span {
+.v-sa .v-button-small .v-button-caption {
 	height: 18px;
 	padding-top: 2px;
 }
 .v-button-small:focus {
 	background-image: url(img/small-left-focus.png); /** sprite-ref: buttons */
 }
-.v-button-small:focus span {
+.v-button-small:focus .v-button-caption {
 	background-image: url(img/small-right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 .v-button-small:active,
 .v-ie7 .v-button-small.v-pressed {
 	background-image: url(img/small-left-pressed.png); /** sprite-ref: buttons */
 }
-.v-button-small:active span,
-.v-ie7 .v-button-small.v-pressed span {
+.v-button-small:active .v-button-caption,
+.v-ie7 .v-button-small.v-pressed .v-button-caption {
 	background-image: url(img/small-right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 
