--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1662,7 +1662,7 @@ div > .v-button .v-icon,
 	height: 16px;
 	overflow: hidden;
 	position: relative;
-	margin: 0 3px 0 0;
+	margin: 0 3px 0 6px;
 }
 .v-ff2 .v-button .v-icon {
 	display: block;
@@ -1674,8 +1674,8 @@ div > .v-button .v-icon,
 }
 .v-button .v-icon + .v-button-caption,
 .v-button .v-icon + .v-errorindicator + .v-button-caption {
-	margin-left: -19px;
-	padding-left: 19px;
+	margin-left: -25px;
+	padding-left: 25px;
 }
 /* Buttons with error indicator */
 div > .v-button .v-errorindicator,
@@ -1705,7 +1705,7 @@ div > .v-button .v-errorindicator,
 .v-ff .v-button .v-errorindicator,
 .v-sa .v-button .v-errorindicator {
 	top: 2px;
-	left: 10px;
+	left: 16px;
 }
 /* Buttons with explicit size */
 .v-button[style*="width"] .v-button-caption {
