--- a/WebContent/VAADIN/themes/example/layouts/mainLayout.html
+++ b/WebContent/VAADIN/themes/example/layouts/mainLayout.html
@@ -1,5 +1,5 @@
 
-<!-- Toolkit components are placed with divs that have matching
+<!-- Vaadin components are placed with divs that have matching
 location tag -->
 
 <table>
