#2904 ToolkitTunes -> VaadinTunes and one other file rename
svn changeset:7864 branch:6.0

--- a/WebContent/VAADIN/themes/vaadintunes/styles.css
+++ b/WebContent/VAADIN/themes/vaadintunes/styles.css
@@ -2,7 +2,7 @@
 
 
 /******************************************************************************
- * For ToolkitTunesLayout.java
+ * For VaadinTunesLayout.java
  ******************************************************************************/
  
 .tTunes, .tTunes select, .tTunes button {
